Testy dla deref

--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -46,6 +46,7 @@
     <Compile Include="AbstractElement.cs" />
     <Compile Include="AbstractLeaf.cs" />
     <Compile Include="AlterClass.cs" />
+    <Compile Include="Deref.cs" />
     <Compile Include="DropAttribute.cs" />
     <Compile Include="AttributeDeclaration.cs" />
     <Compile Include="AlterInterface.cs" />
