Rozszerzenie mechanizmu indeksowania

--- a/Server/Common/IndexMechanism/BasicIndexes/BasicIndexes.csproj
+++ b/Server/Common/IndexMechanism/BasicIndexes/BasicIndexes.csproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BinaryTree\binaryTree.cs" />
+    <Compile Include="IndexesStringKey\IntIndexKey.cs" />
     <Compile Include="IndexesStringKey\StringIndexKey.cs" />
     <Compile Include="IntDumpIndex.cs" />
     <Compile Include="IntIndex.cs" />
