--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AbstractLeaf.cs" />
     <Compile Include="AlterClass.cs" />
     <Compile Include="CreateIndex.cs" />
+    <Compile Include="Deref.cs" />
     <Compile Include="DropAttribute.cs" />
     <Compile Include="AttributeDeclaration.cs" />
     <Compile Include="AlterInterface.cs" />
