--- a/Server/Common/QueryTreeTests/QueryTreeTests.csproj
+++ b/Server/Common/QueryTreeTests/QueryTreeTests.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="ClassNameTests.cs" />
     <Compile Include="DerefTests.cs" />
+    <Compile Include="NewObjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectStatementTests.cs" />
   </ItemGroup>
