--- a/Server/Common/QueryTreeTests/QueryTreeTests.csproj
+++ b/Server/Common/QueryTreeTests/QueryTreeTests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -75,6 +76,7 @@
     <Compile Include="DerefTests.cs" />
     <Compile Include="DropClassTests.cs" />
     <Compile Include="NewObjectTests.cs" />
+    <Compile Include="ParentClassesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectStatementTests.cs" />
   </ItemGroup>
