testy dla DeleteObject

--- a/Server/Common/QueryTreeTests/QueryTreeTests.csproj
+++ b/Server/Common/QueryTreeTests/QueryTreeTests.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="ClassDeclarationTests.cs" />
     <Compile Include="ClassNameTests.cs" />
+    <Compile Include="DeleteObjectTests.cs" />
     <Compile Include="DerefTests.cs" />
     <Compile Include="DropClassTests.cs" />
     <Compile Include="NewObjectTests.cs" />
