--- a/Server/Common/QueryOptimizer/QueryOptimizer.csproj
+++ b/Server/Common/QueryOptimizer/QueryOptimizer.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="QueryOptimizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common\Common.csproj">
