--- a/OdraIDE/OdraIDE.Core.Layout/OdraIDE.Core.Layout.csproj
+++ b/OdraIDE/OdraIDE.Core.Layout/OdraIDE.Core.Layout.csproj
@@ -69,8 +69,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AvalonDock">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libraries\AvalonDock\AvalonDock.dll</HintPath>
+      <HintPath>..\..\Libraries\AvalonDock.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
