--- a/OdraIDE/OdraIDE.SolutionExplorer/OdraIDE.SolutionExplorer.csproj
+++ b/OdraIDE/OdraIDE.SolutionExplorer/OdraIDE.SolutionExplorer.csproj
@@ -68,8 +68,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AvalonDock">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libraries\AvalonDock\AvalonDock.dll</HintPath>
+      <HintPath>..\..\Libraries\AvalonDock.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.TreeView">
       <SpecificVersion>False</SpecificVersion>
