--- a/OdraIDE/OdraIDE.Tasks/OdraIDE.Tasks.csproj
+++ b/OdraIDE/OdraIDE.Tasks/OdraIDE.Tasks.csproj
@@ -65,8 +65,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AvalonDock">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libraries\AvalonDock\AvalonDock.dll</HintPath>
+      <HintPath>..\..\Libraries\AvalonDock.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.AvalonEdit, Version=5.0.3.0, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
       <HintPath>..\..\packages\AvalonEdit.5.0.4\lib\Net40\ICSharpCode.AvalonEdit.dll</HintPath>
