--- a/QueryLoader/App.config
+++ b/QueryLoader/App.config
@@ -3,4 +3,11 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <appSettings>
+      <add key="analizerPath" value="/Server/Common/EBNFQueryAnalyzer" />
+      <add key="grammarFileName" value="QueryGrammar.g" />
+      <add key="analizerProjectName" value="EBNFQueryAnalyzer" />
+      <add key="analizerFile" value="/bin/Debug/MUTDOD.Server.Common.EBNFQueryAnalyzer.dll" />
+      <add key="logName" value="QueryLogger.log" />
+    </appSettings>
 </configuration>
