--- a/QueryLoader/QueryLoader.csproj
+++ b/QueryLoader/QueryLoader.csproj
@@ -52,6 +52,7 @@
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.Build.Framework" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
