--- a/Common/Types/Types.csproj
+++ b/Common/Types/Types.csproj
@@ -50,7 +50,9 @@
   <ItemGroup>
     <Compile Include="Did.cs" />
     <Compile Include="DynamicRole.cs" />
+    <Compile Include="IMethod.cs" />
     <Compile Include="IStorable.cs" />
+    <Compile Include="Method.cs" />
     <Compile Include="Oid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Property.cs" />
