--- a/Server/Common/EBNFQueryAnalyzer/EBNFQueryAnalyzer.csproj
+++ b/Server/Common/EBNFQueryAnalyzer/EBNFQueryAnalyzer.csproj
@@ -66,6 +66,10 @@
       <Project>{02C7D2E4-48B6-4C3E-89F4-F15A09DEE23F}</Project>
       <Name>ModuleBase</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\Common\Types\Types.csproj">
+      <Project>{6f59e8e0-d8c9-438c-ae4c-7f5c08a99db4}</Project>
+      <Name>Types</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QueryTree\QueryTree.csproj">
       <Project>{D5E93D78-E622-491B-BC54-A0BD3CE37E67}</Project>
       <Name>QueryTree</Name>
