--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -57,6 +57,7 @@
     <Compile Include="AttributeDeclaration.cs" />
     <Compile Include="AlterInterface.cs" />
     <Compile Include="DropInterface.cs" />
+    <Compile Include="DropMethod.cs" />
     <Compile Include="InterfaceDeclaration.cs" />
     <Compile Include="ClassDeclaration.cs" />
     <Compile Include="ClassName.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="DropClass.cs" />
     <Compile Include="DropDatabase.cs" />
     <Compile Include="MethodDeclaration.cs" />
+    <Compile Include="MethodParam.cs" />
     <Compile Include="ObjectUpdateElement.cs" />
     <Compile Include="DeleteObject.cs" />
     <Compile Include="LogicalOperatorAnd.cs" />
