--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ClassProperty.cs" />
     <Compile Include="DropClass.cs" />
     <Compile Include="DropDatabase.cs" />
+    <Compile Include="Literal\FloatLiteral.cs" />
     <Compile Include="MethodDeclaration.cs" />
     <Compile Include="MethodParam.cs" />
     <Compile Include="ObjectUpdateElement.cs" />
