--- a/Server/Common/QueryTree/QueryTree.csproj
+++ b/Server/Common/QueryTree/QueryTree.csproj
@@ -58,6 +58,7 @@
     <Compile Include="AlterInterface.cs" />
     <Compile Include="DropInterface.cs" />
     <Compile Include="DropMethod.cs" />
+    <Compile Include="Exception\SelectExecutionException.cs" />
     <Compile Include="InterfaceDeclaration.cs" />
     <Compile Include="ClassDeclaration.cs" />
     <Compile Include="ClassName.cs" />
